--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "light-toast": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-toastify": "^6.0.8",
+    "redux": "^4.0.5",
     "socket.io": "^2.3.0"
   }
 }
