--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "webpack": "^5.1.0"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
