--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/alaa-lasoued/E.A.S.T#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
