--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "js-file-download": "^0.4.12",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
